fixed scroll cutoff issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -96,3 +96,10 @@ body {
     @apply bg-background text-foreground;
   }
 }
+
+#client-solutions,
+#process,
+#choose,
+#contact-form {
+  scroll-margin-top: 100px;
+}
